sourceSets {

    java9 {
        java {
            srcDirs = ['src/main/java9']
        }
    }
    java11 {
        java {
            srcDirs = ['src/main/java11']
        }
    }
    java15 {
        java {
            srcDirs = ['src/main/java15']
        }
    }
}

compileJava {
    sourceCompatibility = 8
    targetCompatibility = 8
    options.fork = true
    options.forkOptions.executable = "${System.getenv("JAVA_8_HOME")}/bin/javac"
}

compileJava9Java {
    sourceCompatibility = 9
    targetCompatibility = 9
    options.fork = true
    options.forkOptions.executable = "${System.getenv("JAVA_11_HOME")}/bin/javac"
    options.forkOptions.javaHome = file("${System.getenv("JAVA_11_HOME")}")
    options.compilerArgs.addAll(['--add-exports', 'java.base/jdk.internal.reflect=ALL-UNNAMED', '--add-exports', 'java.base/jdk.internal.perf=ALL-UNNAMED'])
}

compileJava11Java {
    sourceCompatibility = 11
    targetCompatibility = 11
    options.fork = true
    options.forkOptions.executable = "${System.getenv("JAVA_11_HOME")}/bin/javac"
    options.forkOptions.javaHome = file("${System.getenv("JAVA_11_HOME")}")
    options.compilerArgs.addAll(['--add-exports', 'java.base/jdk.internal.reflect=ALL-UNNAMED', '--add-exports', 'java.base/jdk.internal.perf=ALL-UNNAMED'])
}

compileJava15Java {
    sourceCompatibility = 15
    targetCompatibility = 15
    options.fork = true
    options.forkOptions.executable = "${System.getenv("JAVA_17_HOME")}/bin/javac"
    options.forkOptions.javaHome = file("${System.getenv("JAVA_17_HOME")}")
    options.compilerArgs.addAll(['--add-exports', 'java.base/jdk.internal.reflect=ALL-UNNAMED', '--add-exports', 'java.base/jdk.internal.perf=ALL-UNNAMED'])
}

dependencies {
    java9Implementation files(sourceSets.main.output.classesDirs) {
        builtBy compileJava
    }
    java11Implementation files(sourceSets.main.output.classesDirs) {
        builtBy compileJava
    }
    java15Implementation files(sourceSets.main.output.classesDirs) {
        builtBy compileJava
    }

    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'

    // https://mvnrepository.com/artifact/org.jctools/jctools-core
    implementation(group: 'org.jctools', name: 'jctools-core', version: '4.0.1')

    java9Implementation project(':btrace-core')
    java9Implementation project(':btrace-services-api')
    java9Implementation project(':btrace-services')

    java11Implementation project(':btrace-core')
    java11Implementation project(':btrace-services-api')
    java11Implementation project(':btrace-services')

    java15Implementation project(':btrace-core')
    java15Implementation project(':btrace-services-api')
    java15Implementation project(':btrace-services')

    implementation project(':btrace-core')
    implementation project(':btrace-services-api')
    implementation project(':btrace-services')
}

jar {
    into('') {
        from sourceSets.java9.output
    }
    into('') {
        from sourceSets.java11.output
    }
    into('') {
        from sourceSets.java15.output
    }
}